# test_the_untestable

./: .gitignore  .pre-commit-config.yaml  LICENSE  examples.ipynb  pyproject.toml
test_debug/: test_asgi_apps.py  test_teardown_in_pytest.py  test_unreachable_service_class.py  test_unreachable_service_class_in_real_life.py  test_with_fancy_mocks_and_pugins.py  test_with_freezgun.py
